// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoticeBar icon 1`] = `
<div
  class="za-message za-message--warning za-message--lg"
>
  <div
    class="za-message__header"
  >
    <div
      class="za-message__icon"
    >
      <img
        alt=""
        src="https://zhongantecheng.github.io/zarm/images/state.18e78939.png"
      />
    </div>
  </div>
  <div
    class="za-message__body"
  >
    <div
      class="za-notice-bar"
    >
      <div
        class="za-notice-bar__body"
        style="left:0"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;

exports[`NoticeBar renders correctly 1`] = `
<NoticeBar
  closable={false}
  hasArrow={false}
  icon={
    <Icon
      prefixCls="za-icon"
      type="broadcast"
    />
  }
  prefixCls="za-notice-bar"
  scrollable={false}
  theme="warning"
>
  <Message
    closable={false}
    hasArrow={false}
    icon={
      <Icon
        prefixCls="za-icon"
        type="broadcast"
      />
    }
    prefixCls="za-message"
    size="lg"
    theme="warning"
  >
    <div
      className="za-message za-message--warning za-message--lg"
      onClick={[Function]}
    >
      <div
        className="za-message__header"
      >
        <div
          className="za-message__icon"
        >
          <Icon
            prefixCls="za-icon"
            type="broadcast"
          >
            <i
              className="za-icon za-icon--broadcast"
            />
          </Icon>
        </div>
      </div>
      <div
        className="za-message__body"
      >
        <div
          className="za-notice-bar"
        >
          <div
            className="za-notice-bar__body"
            style={
              Object {
                "left": 0,
              }
            }
          >
            foo
          </div>
        </div>
      </div>
    </div>
  </Message>
</NoticeBar>
`;

exports[`NoticeBar scrollable 1`] = `
<NoticeBar
  closable={false}
  hasArrow={false}
  icon={
    <Icon
      prefixCls="za-icon"
      type="broadcast"
    />
  }
  prefixCls="za-notice-bar"
  scrollable={true}
  theme="warning"
>
  <Message
    closable={false}
    hasArrow={false}
    icon={
      <Icon
        prefixCls="za-icon"
        type="broadcast"
      />
    }
    prefixCls="za-message"
    size="lg"
    theme="warning"
  >
    <div
      className="za-message za-message--warning za-message--lg"
      onClick={[Function]}
    >
      <div
        className="za-message__header"
      >
        <div
          className="za-message__icon"
        >
          <Icon
            prefixCls="za-icon"
            type="broadcast"
          >
            <i
              className="za-icon za-icon--broadcast"
            />
          </Icon>
        </div>
      </div>
      <div
        className="za-message__body"
      >
        <div
          className="za-notice-bar"
        >
          <div
            className="za-notice-bar__body"
            style={
              Object {
                "left": 0,
              }
            }
          >
            各位zarmer请注意，本组件使用了自动滚动功能，更多用法请参见使用文档。
          </div>
        </div>
      </div>
    </div>
  </Message>
</NoticeBar>
`;

exports[`NoticeBar theme 1`] = `
<div
  class="za-message za-message--danger za-message--lg"
>
  <div
    class="za-message__header"
  >
    <div
      class="za-message__icon"
    >
      <i
        class="za-icon za-icon--broadcast"
      />
    </div>
  </div>
  <div
    class="za-message__body"
  >
    <div
      class="za-notice-bar"
    >
      <div
        class="za-notice-bar__body"
        style="left:0"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;
